Fix mobile nav submenu too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,12 @@ img.modal-content:hover {
     padding: .5rem;
 }
 
+.dropdown-content a {
+    font-size: 1.5rem;
+    color: #afabab;
+    padding-top: 1rem;
+}
+
 .active {
     color: #fce711;
 }
